# llm-wiki-compiler

./: .gitignore  README.md  pyproject.toml
klore/: __init__.py  __main__.py  asker.py  cli.py  compiler.py  git.py  hash.py  ingester.py  linter.py  log.py  longform.py  models.py  state.py
klore/plugin/plugins/klore/commands/: _check-klore.sh  wiki-longform.md
klore/prompts/: agents_template.md  ask.md  compile_concept.md  compile_entity.md  compile_index.md  compile_log_entry.md  compile_source.md  director_brief.md  director_lint.md  director_overview.md  director_query.md  director_review.md  lint.md  longform.md  normalize_tags.md
tests/: test_cli.py  test_integration.py  test_models.py  test_state.py
