[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klore"
version = "0.1.0"
description = "LLM Knowledge Compiler — raw sources in, living knowledge base out"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "klore contributors" }]
keywords = ["llm", "knowledge-base", "wiki", "compiler", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "markitdown[all]>=0.1",
    "pyyaml>=6.0",
]

[project.scripts]
klore = "klore.cli:cli"

[project.urls]
Homepage = "https://github.com/klore-kb/klore"
